# cross-contract-calls

./: Cargo.toml  README.md  asconfig.json  jest.config.js  package.json
contracts/: tsconfig.json
contracts/00.orientation/: README-ES.md  README.md
contracts/00.orientation/__tests__/: main.spec.ts
contracts/00.orientation/simulation/src/: lib.rs  local.rs
contracts/00.orientation/src/00-local/__tests__/: index.unit.spec.ts
contracts/00.orientation/src/00-local/assembly/: index.ts
contracts/01.using-single-calls/: README.md
contracts/01.using-single-calls/simulation/: Cargo.toml
contracts/01.using-single-calls/simulation/src/: lib.rs  loopback.rs
contracts/01.using-single-calls/src/01-loopback/assembly/: index.ts
contracts/10.linkdrop/: README.md
contracts/10.linkdrop/simulation/src/: lib.rs
contracts/10.linkdrop/src/10/__tests__/: index.unit.spec.ts
contracts/10.linkdrop/src/10/assembly/: index.ts
contracts/20.nearly-neighbors/: README.md
contracts/20.nearly-neighbors/simulation/src/: lib.rs  proposal.rs
contracts/20.nearly-neighbors/src/: utils.ts
contracts/20.nearly-neighbors/src/20-project/__tests__/: index.unit.spec.ts
contracts/20.nearly-neighbors/src/20-project/assembly/: index.ts
contracts/20.nearly-neighbors/src/20-proposal/__tests__/: index.unit.spec.ts
contracts/20.nearly-neighbors/src/20-proposal/assembly/: index.ts
