# [package]
# name = "cross-contract-calls"
# version = "0.0.0"
# authors = ["Near Inc <hello@nearprotocol.com>"]
# edition = "2018"

[workspace]
members = [
  "contracts/00.orientation/simulation",
  "contracts/01.using-single-calls/simulation",
  "contracts/10.linkdrop/simulation",
  "contracts/20.nearly-neighbors/simulation"
]
